--- a/docs/team/timothyleong97.adoc
+++ b/docs/team/timothyleong97.adoc
@@ -17,35 +17,27 @@ Cards can also easily be shared via a json file per deck of cards.
 
 == Summary of contributions
 
-* *Major enhancement*: added *the ability to undo/redo previous commands*
-** What it does: allows the user to undo all previous commands one at a time. Preceding undo commands can be reversed by using the redo command.
-** Justification: This feature improves the product significantly because a user can make mistakes in commands and the app should provide a convenient way to rectify them.
-** Highlights: This enhancement affects existing commands and commands to be added in future. It required an in-depth analysis of design alternatives. The implementation too was challenging as it required changes to existing commands.
-** Credits: _{mention here if you reused any code/ideas from elsewhere or if a third-party library is heavily used in the feature so that a reader can make a more accurate judgement of how much effort went into the feature}_
+* *Major enhancement*: added *the ability to write and run JavaScript and Java Code* both in a playground and in flashcards
+** What it does: Allows user to play with JavaScript and Java code in popup playgrounds where users can compile and run JavaScript or Java code as much as they want. Also allows the user to make
+Java and JavaScript flash cards that allow users to do Kattis/Codility-like tasks in flashcards
+** Justification: Current type of flash cards only suit very basic memorisation skills even though the medium of flashcards is easily extensible. As more students are learning programming nowadays, practicising writing code fast is a good way to train programming skills.
+** Highlights: Benefits students who are learning to code by allowing them to mimick the tests found on online code judges and write their own problems
+** Credits: Mozilla Rhino for evaluating JavaScript Code.
 
-* *Minor enhancement*: added a history command that allows the user to navigate to previous commands using up/down keys.
-
-* *Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] _{give links to collated code files}_
+* *Minor enhancement*: Refactored GUI to follow MVC pattern
+- What it does: allow controls such as buttons to influence the Model (delete, create cards etc)
+- Justification: The CLI commands may be slightly less intuitive to use at times compared to using the GUI. Controllers allow the GUI to interface with the app's Logic.
 
 * *Other contributions*:
 
 ** Project management:
-*** Managed releases `v1.3` - `v1.5rc` (3 releases) on GitHub
 ** Enhancements to existing features:
-*** Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
-*** Wrote additional tests for existing features to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
-** Documentation:
-*** Did cosmetic tweaks to existing contents of the User Guide: https://github.com[#14]
+*** Wrote tests for all the non-GUI-related classes I created
 ** Community:
-*** PRs reviewed (with non-trivial review comments): https://github.com[#12], https://github.com[#32], https://github.com[#19], https://github.com[#42]
-*** Contributed to forum discussions (examples:  https://github.com[1], https://github.com[2], https://github.com[3], https://github.com[4])
-*** Reported bugs and suggestions for other teams in the class (examples:  https://github.com[1], https://github.com[2], https://github.com[3])
-*** Some parts of the history feature I added was adopted by several other class mates (https://github.com[1], https://github.com[2])
+*** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103-F09-2/main/pull/181[#181]
 ** Tools:
-*** Integrated a third party library (Natty) to the project (https://github.com[#42])
-*** Integrated a new Github plugin (CircleCI) to the team repo
+*** Created a DeepCopy utility class for duplicating team-created Java objects.
 
-_{you can add/remove categories in the list above}_
 
 == Contributions to the User Guide
 
@@ -53,6 +45,7 @@ _{you can add/remove categories in the list above}_
 |===
 |_Given below are sections I contributed to the User Guide. They showcase my ability to write documentation targeting end-users._
 |===
+I wrote https://github.com/AY1920S1-CS2103-F09-2/main/blob/master/docs/UserGuide.adoc#add-new-javascript-card-or-java-card[Add new Javascript card or Java Card]
 
 == Contributions to the Developer Guide
 
@@ -60,8 +53,6 @@ _{you can add/remove categories in the list above}_
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-== PROJECT: PowerPointLabs
+== PROJECT: FlashCard Pro
 
 ---
-
-_{Optionally, you may include other projects in your portfolio.}_
