--- a/docs/team/cutieprobe.adoc
+++ b/docs/team/cutieprobe.adoc
@@ -25,8 +25,15 @@
 * *Code contributed*: [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=cutieprobe&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=cutieprobe&tabRepo=AY1920S1-CS2103-T16-3%2Fmain%5Bmaster%5D[RepoSense Data]]
 
 * *Other contributions*:
-** Update AboutUs, ContactUs and README [https://github.com/AY1920S1-CS2103-T16-3/main/pull/32[#32]]
-** Reported bugs and suggestions for other teams [https://github.com/cutieprobe/ped/issues[PED]]
+** Project management:
+*** Reviewed meticulously peer's pull requests with non-trivial comments. [https://github.com/AY1920S1-CS2103-T16-3/main/pulls?utf8=%E2%9C%93&q=is%3Apr+is%3Aclosed+reviewed-by%3Acutieprobe[Reviews]]
+*** Contributed to morphing from AddressBook 3 to Weme (Remove `email` and `phone` field in `Meme`). [https://github.com/AY1920S1-CS2103-T16-3/main/pull/35[#35]]
+** Documentation:
+*** Update AboutUs, ContactUs and README [https://github.com/AY1920S1-CS2103-T16-3/main/pull/32[#32]]
+** Community:
+*** Reported bugs and suggestions for other teams [https://github.com/cutieprobe/ped/issues[PED]]
+** Tools:
+*** Added support for Apache Commons. [https://github.com/AY1920S1-CS2103-T16-3/main/pull/71[#71]]
 
 == Contributions to the User Guide
 
